--- a/src/styles/core/_mixins.styl
+++ b/src/styles/core/_mixins.styl
@@ -46,3 +46,46 @@ scroll-vertical()
 scroll-horizontal()
   -webkit-overflow-scrolling: touch
   overflow-x: scroll
+
+transition-property()
+  -webkit-transition-property: arguments
+  -moz-transition-property: arguments
+  -o-transition-property: arguments
+  transition-property: arguments
+
+transition-duration(value = 0.4s)
+  -webkit-transition-duration: value
+  -moz-transition-duration: value
+  -o-transition-duration: value
+  transition-duration: value
+
+transition-timing-function(value = linear)
+  -webkit-transition-timing-function: linear
+  -moz-transition-timing-function: linear
+  -o-transition-timing-function: linear
+  transition-timing-function: linear
+  
+box-shadow-2()
+    -webkit-box-shadow: arguments
+    -moz-box-shadow: arguments
+    box-shadow: arguments
+
+z-depth-1(colorA = rgba(0, 0, 0, 0.16), colorB = rgba(0, 0, 0, 0.12))
+  box-shadow-2: 0 2px 5px 0 colorA, 0 2px 10px 0 colorB
+  
+z-depth-1-half(colorA = rgba(0, 0, 0, 0.18), colorB = rgba(0, 0, 0, 0.15))
+  box-shadow-2: 0 5px 11px 0 colorA, 0 4px 15px 0 colorB
+  
+z-depth-2(colorA = rgba(0, 0, 0, 0.2), colorB = rgba(0, 0, 0, 0.19))
+  box-shadow-2: 0 8px 17px 0 colorA, 0 6px 20px 0 colorB
+  
+z-depth-3(colorA = rgba(0, 0, 0, 0.24), colorB = rgba(0, 0, 0, 0.19))
+  box-shadow-2: 0 12px 15px 0 colorA, 0 17px 50px 0 colorB
+  
+z-depth-4(colorA = rgba(0, 0, 0, 0.22), colorB = rgba(0, 0, 0, 0.21))
+  box-shadow-2: 0 16px 28px 0 colorA, 0 25px 55px 0 colorB
+  
+z-depth-5(colorA = rgba(0, 0, 0, 0.2), colorB = rgba(0, 0, 0, 0.22))
+  box-shadow-2: 0 27px 24px 0 colorA, 0 40px 77px 0 colorB
+  
+  
